--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "build": "npm install && cd frontend && npm install && npm run build"
-
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "concurrently": "^7.6.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.8.3"
